fixed Image not showing up

--- a/style.css
+++ b/style.css
@@ -44,9 +44,17 @@ max-width: 80%;
     width: 100%;
     height: 130px;
     border-radius: 6px 6px 0 0;
-    background-image: ;
-  }
+    max-width: 100%;
+    max-height: 100%;
   
+  }
+
+  .bookImage img {
+    width: 100%; /* Set the width of the <img> to 100% of its container */
+    height: 100%; /* Set the height of the <img> to 100% of its container */
+    object-fit:cover; /* Use 'contain' to downscale the image while preserving its aspect ratio */
+  }
+
   .bookImage:hover {
     transform: scale(0.98);
   }
